...
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="No account yet? Create one"
            android:textSize="16dip" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_skip_to_draw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:onClick="onStraightToDrawClick"
            android:text="Skip To Draw"
            android:visibility="gone"
            />

    </LinearLayout>
</ScrollView>
