...
    <string name="android_device">Android Device</string>
    <string name="sensor_tile">Sensor Tile</string>
    <string name="export_to_bitmap">Export to bitmap</string>
    <string name="calibrate_sensor">Calibrate sensor</string>
    <string name="show_statistics">Show statistics</string>
    <string name="rotate_map">Rotate map</string>
    <string name="start_movement_tracking">Start Movement Tracking</string>
    <string name="pause_movement_tracking">Pause Movement Tracking</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to onGooglLoginClicked -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
...
